--- a/style.css
+++ b/style.css
@@ -44,7 +44,11 @@ img {
 }
 
 /* section styles */
+body {
+	min-height: 100vh;
+}
 
+/* header styles */
 header {
 	padding: 1.5rem;
 	display: flex;
@@ -62,7 +66,36 @@ nav.primary a {
 	text-decoration: none;
 	padding-left: 1.5rem;
 }
+/* main section styles */
+main {
+	padding: 2.15rem;
+	margin-top: 2.5rem;
+	text-align: center;
+}
 
+/* hero section styles */
+
+.hero img {
+	margin-bottom: 1rem;
+}
+
+.hero h2 {
+	font-size: 1.5rem;
+	font-weight: 700;
+	padding: 1.5rem 0;
+
+	line-height: 1.5;
+}
+
+.hero p {
+	line-height: 21px;
+	font-size: 0.9rem;
+}
+
+.hero input,
+.hero button {
+	width: 100%;
+}
 /* attribution styles */
 .attribution {
 	font-size: 11px;
