--- a/style.css
+++ b/style.css
@@ -80,19 +80,21 @@ header {
 header .logo {
 	width: 5rem;
 }
-
+.primary ul {
+	display: flex;
+}
 nav.primary a {
 	padding-left: 1.5rem;
 }
 /* main section styles */
 main {
-	/* padding: 2rem 1.75rem; */
-
 	text-align: center;
 }
 
 /* hero section styles */
-
+.hero {
+	padding: 6rem 1.5rem 0 1.5rem;
+}
 .hero img {
 	margin-bottom: 1rem;
 }
@@ -135,7 +137,7 @@ p.error {
 
 /* testimonial section styles */
 section.testimonial {
-	padding-top: 7.5rem;
+	padding: 5rem 1.4rem 0 1.4rem;
 	background-image: url(./images/bg-curve-mobile.svg) no-repeat;
 }
 .testimonial .img-container {
@@ -171,7 +173,7 @@ p.productivity {
 
 blockquote {
 	background-color: white;
-	margin: 2rem 3rem;
+	margin: 1.75rem 2rem;
 	padding: 1.5rem 1.3rem 2rem 1.3rem;
 	text-align: left;
 	line-height: 18px;
@@ -230,9 +232,41 @@ blockquote {
 }
 
 /* footer styles */
-footer {
+footer,
+footer a {
 	color: white;
 	background-color: var(--very-dark-blue);
+}
+
+footer {
+	padding: 4rem 2rem 2rem 2rem;
+}
+.logo {
+	width: 105px;
+}
+
+.contact {
+	margin: 2rem 0;
+}
+.contact p {
+	display: inline-block;
+	font-size: 1rem;
+	padding-left: 1rem;
+}
+
+.contact div:first-child {
+	padding-bottom: 1rem;
+}
+
+.list-1 a,
+.list-2 a {
+	font-size: 1rem;
+	display: inline-block;
+	padding-bottom: 1rem;
+}
+
+.list-1 {
+	padding-bottom: 1rem;
 }
 /* attribution styles */
 .attribution {
